syntax = "proto3";
package pack;

//  接口
service bg {
    rpc IOTCardRecharge (IOTCardRechargeModel) returns (CmsResp);
    rpc IOTCardRefresh (IOTCardModel) returns (CmsResp);
    rpc IOTCardImport (IOTCardImportModel) returns (CmsResp);
    rpc DingTalkSystemMsg (DingTalkSystemMsgModel) returns (CmsResp);
}

//  物联网卡充值
message IOTCardRechargeModel {
    string iccid = 1; 
    bool is_auto_effect = 2; 
}

//  物联网卡
message IOTCardModel {
    string iccid = 1; 
}

//  导入物联网卡
message IOTCardImportModel {
    string data = 1; 
}

//  钉钉消息模型
message DingTalkSystemMsgModel {
    string admin_name = 1; 
    string msg = 2; 
}

//  通用返回模型
message CmsResp {
    ReturnStatus status = 1; 
    string desc = 2; 
}

//  商品
message Commodity {
    int32 id = 1; 
    string name = 2; 
    int32 price = 3; 
}


enum ReturnStatus {
    StatusFail = 0; //处理失败 
    StatusSuccess = 1; //成功 
    StatusArgumentInvalid = 2; //参数错误 
    StatusAuthVerifyFail = 3; //访问校验失败 
}

